--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700"
+      href="https://fonts.googleapis.com/css?family=Lato|Marck+Script|Nunito"
       rel="stylesheet"
     />
     <link
       href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
       rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Cormorant+Garamond"
+      rel="stylesheet"
+    />
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="430441876577-gpsarrij27132ir90dqb493hanfrn0og.apps.googleusercontent.com.apps.googleusercontent.com"
     />
     <title>Paperwiff</title>
   </head>
